--- a/css/landing.css
+++ b/css/landing.css
@@ -150,7 +150,7 @@ html
             }
             .third p
             {
-                font-size: 7oem;
+                font-size: 70em;
             }
             footer
             {
