--- a/css/landing.css
+++ b/css/landing.css
@@ -147,6 +147,7 @@ html
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                flex-wrap:wrap;
             }
             .third p
             {
