--- a/css/landing.css
+++ b/css/landing.css
@@ -151,7 +151,7 @@ html
             }
             .third p
             {
-                font-size: 70em;
+                font-size: 70px;
             }
             footer
             {
